--- a/package.json
+++ b/package.json
@@ -21,12 +21,17 @@
     "@hapi/inert": "^5.2.0",
     "@hapi/vision": "^5.5.2",
     "bson-ext": "^2.0.2",
+    "firebase-admin": "^8.3.0",
+    "good": "^8.1.2",
+    "good-file": "^6.0.1",
     "hapi-swagger": "^10.0.1",
     "hapi-swaggered": "^3.0.3",
     "hapi-swaggered-ui": "^2.6.2",
     "joi": "^14.3.1",
     "lodash": "^4.17.11",
-    "mongodb": "^3.2.6"
+    "mongodb": "^3.2.6",
+    "winston": "^3.2.1",
+    "winston-daily-rotate-file": "^3.10.0"
   },
   "devDependencies": {
     "boom": "^7.3.0",
